--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ישיבת בית הלוי - ראש העין</title>
-
+    <meta name="description" content="האתר הרשמי של ישיבת בית הלוי בראש העין בראשות הגר''א עפג'ין שליט''א. באתר תוכלו למצוא חדשות, עדכונים, גלריות תמונות מאירועים בישיבה ועוד.">
+    <meta name="keywords" content="ישיבת בית הלוי, הרב אבנר עפג'ין, ראש העין, ישיבה, עולם התורה, שיעורים">
     <!-- קישור לקובץ העיצוב החיצוני -->
     <link rel="stylesheet" href="style.css">
     
@@ -80,3 +81,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
