Add Google site verification meta tag
Added Google site verification meta tag for SEO.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>ישיבת בית הלוי - ראש העין</title>
     <meta name="description" content="האתר הרשמי של ישיבת בית הלוי בראש העין בראשות הגר''א עפג'ין שליט''א. באתר תוכלו למצוא חדשות, עדכונים, גלריות תמונות מאירועים בישיבה ועוד.">
     <meta name="keywords" content="ישיבת בית הלוי, הרב אבנר עפג'ין, ראש העין, ישיבה, עולם התורה, שיעורים">
+   <meta name="google-site-verification" content="LX0EklOQrRGJZHHPzn8RdxEcI824X5sYfZAaHuLXYT0" />
     <!-- קישור לקובץ העיצוב החיצוני -->
     <link rel="stylesheet" href="style.css">
     
@@ -81,4 +82,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
