--- a/index.html
+++ b/index.html
@@ -79,8 +79,11 @@
     
     <script src="https://cdn.jsdelivr.net/npm/hebcal@3.3.1/hebcal.min.js"></script>
     <!-- קישור לקובץ הסקריפט החיצוני -->
+    <!-- [חדש] קישור לספריית Markdown -->
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
