--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="האתר הרשמי של ישיבת בית הלוי בראש העין בראשות הגר''א עפג'ין שליט''א. באתר תוכלו למצוא חדשות, עדכונים, גלריות תמונות מאירועים בישיבה ועוד.">
     <meta name="keywords" content="ישיבת בית הלוי, הרב אבנר עפג'ין, ראש העין, ישיבה, עולם התורה, שיעורים">
    <meta name="google-site-verification" content="LX0EklOQrRGJZHHPzn8RdxEcI824X5sYfZAaHuLXYT0" />
+    <meta name="google-site-verification" content="1vfOf6zLuxoBNCinS9HsVA-gJ7z27sUUD6ZeNn16gLk" />
     <!-- קישור לקובץ העיצוב החיצוני -->
     <link rel="stylesheet" href="style.css">
     
@@ -84,6 +85,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
