Fix HTML formatting and update scripts

--- a/index.html
+++ b/index.html
@@ -79,13 +79,11 @@
     
     <button id="back-to-top-btn" title="חזרה למעלה"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"></path></svg></button>
     
-<!-- קישורים לספריות חיצוניות -->
-  <script src="https://cdn.jsdelivr.net/npm/@hebcal/core@5.10.1/dist/bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/marked/lib/marked.umd.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/gray-matter-browser@4.0.4/index.js"></script>
+<!-- קישורים לספריות חיצוניות (הגרסאות שעובדות) -->
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
-    <!-- קישור לקובץ הסקריפט הראשי -->
-    <script src="script.js"></script>
+<!-- קישור לקובץ הסקריפט הראשי -->
+<script src="script.js"></script>
 </body>
 </html>
 
